# StreamFlow

./: .gitignore  Readme.md  package-lock.json  package.json  server.js  vidio.html
back/: Dockerfile  Dockerfile.analizes  analizes.py  app.py  fly.toml  main.py  pyproject.toml  requisicao.py  samconfig.toml  template.yaml  teste.py
back/.aws-sam/: build.toml
back/src/: baixar_audio.py  main.py  requirements.txt  run.py  yt-requisicao.py
back/src/audio_tools/: audio_finder.py  engine.py  fingerprint.py  matcher.py  persistence.py  segment_extractor.py
back/src/config/: config.py  firebase.py  loggin.py
back/src/firebase/: firebase_consult.py  firebase_save.py
back/src/network/: baixar_video.py
back/src/utils/: descomprimir.py  extrair_audio.py
front/: .env.development  .env.production  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
front/src/: App.tsx  index.css  main.tsx
front/src/components/: CardPlayer.tsx  EpNavButtons.tsx  SearchTextField.tsx
front/src/consts/: const.tsx
front/src/context/: AppProviders.tsx  AuthContext.tsx  Modal.tsx
front/src/hooks/: setupHlsPlayer.ts  useAnimeData.ts  useDebounce.ts  useEpisodesFetcher.ts  useHlsPlayer.ts  useLoginGoogle.ts  useVideoEventListeners.ts  useVideoProgress.ts
front/src/lib/: axios.ts
front/src/pages/: Base.tsx  Home.tsx  Login.tsx  anime.tsx  player.tsx
front/src/services/: anime.ts  serie.ts  (+2 more)
public/: index.html
worker/: package-lock.json  package.json  wrangler.jsonc  wrangler.toml
worker/src/: app.ts  cache.ts  index.ts  routes.ts  s3.ts  types.ts
(+46 files in other folders)
