[project]
name = "api-vidios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "fastapi>=0.120.0",
    "flask>=3.1.2",
    "m3u8>=6.0.0",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "yt-dlp>=2025.10.22",
]
