[project]
name = "api-vidios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.120.0",
    "firebase-admin>=7.1.0",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.5",
    "librosa>=0.11.0",
    "m3u8>=6.0.0",
    "uvicorn>=0.38.0",
]
